# Truth_is_Universal

./: lie_detection.ipynb  pyproject.toml  truth_directions.ipynb
src/truth_is_universal/: __init__.py  regressor.py  ttpd.py  utils.py
