[project]
name = "truth-is-universal"
version = "0.1.0"
description = "Find truth directions in large language models using TTPD"
readme = "README.md"
authors = [
    { name = "Hichem Ammar Khodja", email = "hichem5696@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.0.0",
    "transformers>=4.49.0",
]

[project.scripts]
truth-is-universal = "truth_is_universal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
